Fix: Increased contrast for download APK button text (Fixes #3729)

--- a/appinventor/appengine/war/static/css/Ya.css
+++ b/appinventor/appengine/war/static/css/Ya.css
@@ -3488,6 +3488,7 @@ div.dropdiv p {
   margin-top: 12px !important;
   margin-left: -3px !important;
   height: 130px;
+  color: black !important;
 }
 
 .download-icon {
